# Mandelbrot

./: .gitignore  CMakeLists.txt  avx_mathfun.h  bmpcreator.cc  google.cc  main.cc  man.cc  mandelbench.cc  mandelbrot.h  mandelbrot2png.cc  mandelbrot_widget.cc  mandelbrot_widget.h  readme.md  t.cc  test.cc  teste.cc
imgwrite/: CMakeLists.txt  imgwrite.cc  imgwrite.h
mandelbrot/: CMakeLists.txt  mandelbench.cc  mandelbrot.cc  mandelbrot.h  mandelbrot_avx.h  mandelbrot_default.h  mandelbrot_omp.h  mandelbrot_omp_avx.h
